v10/docs/ModelsSSHLogonsLogonCreationRequest.md
# ModelsSSHLogonsLogonCreationRequest

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**Username** | **string** |  | 
**ServerId** | **int64** |  | 
**UserIds** | Pointer to **[]int64** |  | [optional] 

## Methods

### NewModelsSSHLogonsLogonCreationRequest

`func NewModelsSSHLogonsLogonCreationRequest(username string, serverId int64, ) *ModelsSSHLogonsLogonCreationRequest`

NewModelsSSHLogonsLogonCreationRequest instantiates a new ModelsSSHLogonsLogonCreationRequest object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsSSHLogonsLogonCreationRequestWithDefaults

`func NewModelsSSHLogonsLogonCreationRequestWithDefaults() *ModelsSSHLogonsLogonCreationRequest`

NewModelsSSHLogonsLogonCreationRequestWithDefaults instantiates a new ModelsSSHLogonsLogonCreationRequest object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetUsername

`func (o *ModelsSSHLogonsLogonCreationRequest) GetUsername() string`

GetUsername returns the Username field if non-nil, zero value otherwise.

### GetUsernameOk

`func (o *ModelsSSHLogonsLogonCreationRequest) GetUsernameOk() (*string, bool)`

GetUsernameOk returns a tuple with the Username field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetUsername

`func (o *ModelsSSHLogonsLogonCreationRequest) SetUsername(v string)`

SetUsername sets Username field to given value.


### GetServerId

`func (o *ModelsSSHLogonsLogonCreationRequest) GetServerId() int64`

GetServerId returns the ServerId field if non-nil, zero value otherwise.

### GetServerIdOk

`func (o *ModelsSSHLogonsLogonCreationRequest) GetServerIdOk() (*int64, bool)`

GetServerIdOk returns a tuple with the ServerId field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetServerId

`func (o *ModelsSSHLogonsLogonCreationRequest) SetServerId(v int64)`

SetServerId sets ServerId field to given value.


### GetUserIds

`func (o *ModelsSSHLogonsLogonCreationRequest) GetUserIds() []int64`

GetUserIds returns the UserIds field if non-nil, zero value otherwise.

### GetUserIdsOk

`func (o *ModelsSSHLogonsLogonCreationRequest) GetUserIdsOk() (*[]int64, bool)`

GetUserIdsOk returns a tuple with the UserIds field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetUserIds

`func (o *ModelsSSHLogonsLogonCreationRequest) SetUserIds(v []int64)`

SetUserIds sets UserIds field to given value.

### HasUserIds

`func (o *ModelsSSHLogonsLogonCreationRequest) HasUserIds() bool`

HasUserIds returns a boolean if a field has been set.


[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


